Minor Mac UI tweaks: Eliminated one pixel shift on tab hover and selection, added a little extra spacing between the last button and the first tab, and removed some extra highlighting on tabHoverRight.png -- it's now just a mirror image of tabHoverLeft.png. (Issue 1646)
http://code.google.com/p/fbug/source/detail?r=2558

--- a/extension/skin/classic/mac/firebug.css
+++ b/extension/skin/classic/mac/firebug.css
@@ -70,6 +70,10 @@
     border-bottom: none;
 }
 
+.innerToolbar {
+    margin-right: 5px;   /* add some space between last button and first tab */
+}
+
 #fbSearchBox {
     -moz-appearance: none;
     margin: 4px 6px 1px 6px;
@@ -169,11 +173,6 @@ panelTab {
 panelTab:hover,
 panelTab[selected="true"] {
     margin-bottom: 0px;
-}
-
-panelTab:hover > .panelTab-text,
-panelTab[selected="true"] > .panelTab-text {
-    padding-bottom: 3px;
 }
 
 .panelTab-left {
